Bug 1961215 - expand/collapse key points that persists across previews - r=Mardak,firefox-ai-ml-reviewers
- integration with opt-in
- fix skeleton alignment issues
- add test for toggle expand/collapse
- update optin telemetry tests
- add key_points_toggle telemetry and tests
- prevent key point generation if in-process or keypoints already exist for the card

Differential Revision: https://phabricator.services.mozilla.com/D249851

UltraBlame original commit: 3ca89359d9e93eb6298fe0d8bd7ba4604f0fb552

--- a/browser/components/genai/content/link-preview-card.css
+++ b/browser/components/genai/content/link-preview-card.css
@@ -417,10 +417,6 @@ message
 -
 container
 {
-margin
-:
-0
-;
 font
 -
 size
@@ -437,6 +433,10 @@ font
 -
 size
 )
+;
+margin
+:
+0
 ;
 .
 og
@@ -476,14 +476,11 @@ deemphasized
 ;
 }
 }
-h3
-{
-align
+.
+keypoints
 -
-items
-:
-center
-;
+header
+{
 display
 :
 flex
@@ -535,11 +532,84 @@ margin
 :
 0
 ;
-}
-img
+user
+-
+select
+:
+none
+;
 .
+chevron
+-
 icon
 {
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+arrow
+-
+down
+.
+svg
+"
+)
+;
+background
+-
+position
+:
+center
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+background
+-
+size
+:
+contain
+;
+display
+:
+inline
+-
+block
+;
+fill
+:
+currentColor
+;
+height
+:
+16px
+;
+margin
+-
+inline
+-
+end
+:
+8px
+;
 -
 moz
 -
@@ -549,6 +619,63 @@ properties
 :
 fill
 ;
+transform
+:
+rotateZ
+(
+0deg
+)
+;
+transition
+:
+transform
+0
+.
+3s
+ease
+;
+width
+:
+16px
+;
+}
+}
+.
+keypoints
+-
+header
+:
+has
+(
++
+.
+keypoints
+-
+content
+:
+not
+(
+.
+hidden
+)
+)
+.
+chevron
+-
+icon
+{
+transform
+:
+rotateZ
+(
+180deg
+)
+;
+}
+img
+.
+icon
+{
 fill
 :
 currentColor
@@ -581,6 +708,15 @@ space
 xlarge
 )
 ;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
 pointer
 -
 events
@@ -599,6 +735,67 @@ size
 -
 default
 )
+;
+}
+.
+keypoints
+-
+content
+{
+max
+-
+height
+:
+1000px
+;
+overflow
+:
+hidden
+;
+padding
+-
+inline
+-
+start
+:
+0
+.
+05rem
+;
+/
+*
+custom
+adjustment
+to
+align
+with
+chevron
+icon
+*
+/
+transition
+:
+max
+-
+height
+0
+.
+3s
+ease
+;
+&
+.
+hidden
+{
+max
+-
+height
+:
+0
+;
+overflow
+:
+hidden
 ;
 }
 >
@@ -659,7 +856,7 @@ var
 -
 space
 -
-large
+xlarge
 )
 ;
 }
@@ -759,17 +956,6 @@ display
 :
 flex
 ;
-gap
-:
-var
-(
--
--
-space
--
-xs
-)
-;
 font
 -
 size
@@ -802,6 +988,17 @@ weight
 bold
 )
 ;
+gap
+:
+var
+(
+-
+-
+space
+-
+xs
+)
+;
 }
 }
 >
@@ -824,20 +1021,7 @@ card
 ;
 margin
 -
-top
-:
-var
-(
--
--
-space
--
-xlarge
-)
-;
-margin
--
-bottom
+block
 :
 var
 (
@@ -866,6 +1050,7 @@ medium
 )
 0
 ;
+}
 }
 }
 /
